# ml-orchestrator

./: .gitignore  BLUEPRINT.md  README.md  cli.py  command_functions.py  pyproject.toml  test.py
python_template/: .env
src/: cli.py
src/ml_projects/bar/src/: config.toml
src/ml_projects/bar/src/data/: retriever.py
src/templates/: classification_models.py  regression_models.py
src/templates/c_project_template/src/: config.toml  train.py
src/templates/c_project_template/src/model_funcs/: logistic_regression.py
src/templates/project_template/src/: train.py
src/templates/r_project_template/src/: train.py
src/templates/r_project_template/src/data/: processor.py  retriever.py
src/util/: functions.py
util/: functions.py
