[project]
name = "ml-infra-orch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.10"
dependencies = [
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "python-dotenv>=1.2.1",
    "toml>=0.10.2",
    "typer>=0.20.0",
]


[config]
ml_project_directory = "ml_projects"
