[project]
name = "ml-infra-orch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "click>=8.3.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "toml>=0.10.2",
    "xgboost>=3.1.2",
]


[project.scripts]
haj = "cli:cli"
